--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,4 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 	WIN32_EXECUTABLE TRUE
 	MACOSX_BUNDLE TRUE
 )
+target_compile_options(${PROJECT_NAME} PRIVATE -g3)
